rules.v4
# Generated by iptables-save v1.4.21 on Sun Nov  7 20:26:11 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -s 192.168.20.2/32 -i eth2 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -o 192.168.20.4 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.0/32 -i eth2
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -o eth2 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sun Nov  7 20:26:11 2021
# Generated by iptables-save v1.4.21 on Sun Nov  7 20:26:11 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Nov  7 20:26:11 2021
